Added Case 2025 paper

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,14 @@
+@InProceedings{farell25:case,
+  author =       {S. Farell and C. Li and H. Yu and R. Yoshimitsu and S. Gao and
+                  H. I. Christensen},
+  title =        {Safe Human Robot Navigation in Warehouse Scenario},
+  booktitle =    {{IEEE 21st International Conference on Automation Science and
+                  Engineering (CASE)}},
+  year =         2025,
+  month =        {August},
+  address =      {Los Angeles, CA}
+}
+
 
 @misc{MRTP,
   author =       {Stefano Carpin},
@@ -6,13 +17,12 @@
   year =         {2025}
 }
 
-
 @INPROCEEDINGS{10497406,
   author =       {Kumari, Alka and Dixit, Abhishek and Agrawal, Pooja},
   booktitle =    {2024 International Conference on Emerging Smart Computing and
                   Informatics (ESCI)},
-  title =        {Deep Learning Based Foreign Object Debris (FOD) Detection on
-                  Runway},
+  title =        {{Deep Learning Based Foreign Object Debris (FOD) Detection on
+                  Runway}},
   year =         2024,
   pages =        {1-6},
   keywords =     {YOLO;Deep learning;Training;Atmospheric modeling;Computational
@@ -21,7 +31,6 @@
                   Learning;YOLO;YOLOv8;YOLOv5},
   doi =          {10.1109/ESCI59607.2024.10497406}
 }
-
 
 @incollection{Sharma_2022_OAK1,
   author =       {Aditya Sharma},
