Yi Ma new representation book

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,13 @@
+@book{ldrdd2025,
+  title =        {Learning Deep Representations of Data Distributions},
+  author =       {Buchanan, Sam and Pai, Druv and Wang, Peng and Ma, Yi},
+  month =        aug,
+  year =         2025,
+  publisher =    {Online},
+  note =
+                  {\url{https://ma-lab-berkeley.github.io/deep-representation-learning-book/}.}
+}
+
 @InProceedings{farell25:case,
   author =       {S. Farell and C. Li and H. Yu and R. Yoshimitsu and S. Gao and
                   H. I. Christensen},
