New books and papers on inspection

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,11 +1,51 @@
+
+
+@Book{calo25:RobotLaw,
+  editor =       {Ryan Calo and Michael Froomkin and Kristen Thomasen},
+  title =        {Robot Law - Volume II},
+  publisher =    {Elgar Publishers},
+  year =         2025,
+  address =      {Cheltenham, Glos, UK}
+}
+
+@article{jiao2024real,
+  title =        {Real-Time Metric-Semantic Mapping for Autonomous Navigation in
+                  Outdoor Environments},
+  author =       {Jiao, Jianhao and Geng, Ruoyu and Li, Yuanhang and Xin, Ren
+                  and Yang, Bowen and Wu, Jin and Wang, Lujia and Liu, Ming and
+                  Fan, Rui and Kanoulas, Dimitrios},
+  journal =      {IEEE Transactions on Automation Science and Engineering},
+  year =         {2024},
+  publisher =    {IEEE}
+}
+
+@inproceedings{vslamComparison2021,
+  title =        {A Comparison of Modern General-Purpose Visual SLAM Approaches},
+  author =       {Merzlyakov, Alexey and Macenski, Steven},
+  year =         2021,
+  booktitle =    {2021 IEEE/RSJ International Conference on Intelligent Robots
+                  and Systems (IROS)},
+  pdf =          {https://arxiv.org/abs/2107.07589}
+}
+
+@inproceedings{macenski2020marathon2,
+  title =        {The Marathon 2: A Navigation System},
+  author =       {Macenski, Steve and Martín, Francisco and White, Ruffin and
+                  Ginés Clavero, Jonatan},
+  year =         {2020},
+  booktitle =    {2020 IEEE/RSJ International Conference on Intelligent Robots
+                  and Systems (IROS)},
+  url =          {https://github.com/ros-planning/navigation2},
+  pdf =          {https://arxiv.org/abs/2003.00368}
+}
+
 @book{ldrdd2025,
-  title =        {Learning Deep Representations of Data Distributions},
   author =       {Buchanan, Sam and Pai, Druv and Wang, Peng and Ma, Yi},
+  title =        {Learning Deep Representations of Data Distributions},
   month =        aug,
   year =         2025,
   publisher =    {Online},
-  note =
-                  {\url{https://ma-lab-berkeley.github.io/deep-representation-learning-book/}.}
+  note =         {\url{https://ma-lab-berkeley.github.io/deep-representation-learning-book/}.}
 }
 
 @InProceedings{farell25:case,
