Inspection of planes and prediction, mapping refs

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,4 +1,80 @@
+@inproceedings{bouarfa2020towards,
+  title =        {Towards Automated Aircraft Maintenance Inspection. A use case
+                  of detecting aircraft dents using Mask R-CNN},
+  author =       {Bouarfa, Soufiane and Do{\u{g}}ru, Anil and Arizar, Ridwan and
+                  Aydo{\u{g}}an, Reyhan and Serafico, Joselito},
+  booktitle =    {AIAA Scitech 2020 forum},
+  pages =        {0389},
+  year =         {2020}
+}
 
+@article{GASP:CVPR25,
+  author =       {William Ljungbergh and Adam Lilja and Adam Tonderski and Arvid
+                  Laveno Ling and Carl Lindström and Willem Verbeke and Junsheng
+                  Fu and Christoffer Petersson and Lars Hammarstrand and Michael
+                  Felsberg},
+  title =        {GASP: Unifying Geometric and Semantic Self-Supervised
+                  Pre-training for Autonomous Driving},
+  year =         2025,
+  month =        {March},
+  cdate =        1740787200000,
+  journal =      {Computer Vision and Pattern Recognition {CVPR}},
+  volume =       {abs/2503.15672},
+  url =          {https://doi.org/10.48550/arXiv.2503.15672}
+}
+
+@inproceedings{afshar2024pbp,
+  title =        {{PBP: Path-based trajectory prediction for autonomous
+                  driving}},
+  author =       {Afshar, Sepideh and Deo, Nachiket and Bhagat, Akshay and
+                  Chakraborty, Titas and Shao, Yunming and Buddharaju, Balarama
+                  Raju and Deshpande, Adwait and Motional, Henggang Cui},
+  booktitle =    {2024 IEEE International Conference on Robotics and Automation
+                  (ICRA)},
+  pages =        {12927--12934},
+  year =         2024,
+  organization = {IEEE}
+}
+
+@article{https://doi.org/10.1155/2022/9221211,
+  author =       {Asad, Muhammad Haroon and Khaliq, Saran and Yousaf, Muhammad
+                  Haroon and Ullah, Muhammad Obaid and Ahmad, Afaq},
+  title =        {Pothole Detection Using Deep Learning: A Real-Time and
+                  AI-on-the-Edge Perspective},
+  journal =      {Advances in Civil Engineering},
+  volume =       2022,
+  number =       1,
+  pages =        9221211,
+  doi =          {https://doi.org/10.1155/2022/9221211},
+  url =          {https://onlinelibrary.wiley.com/doi/abs/10.1155/2022/9221211},
+  eprint =       {https://onlinelibrary.wiley.com/doi/pdf/10.1155/2022/9221211},
+  abstract =     {Asphalt pavement distresses are the major concern of
+                  underdeveloped and developed nations for the smooth running of
+                  daily life commute. Among various pavement failures, numerous
+                  research can be found on pothole detection as they are
+                  injurious to automobiles and passengers that may turn into an
+                  accident. This work is intended to explore the potential of
+                  deep learning models and deploy three superlative deep
+                  learning models on edge devices for pothole detection. In this
+                  work, we have exploited the AI kit (OAK-D) on a single-board
+                  computer (Raspberry Pi) as an edge platform for pothole
+                  detection. Detailed real-time performance comparison of
+                  state-of-the-art deep learning models and object detection
+                  frameworks (YOLOv1, YOLOv2, YOLOv3, YOLOv4, Tiny-YOLOv4,
+                  YOLOv5, and SSD-mobilenetv2) for pothole detection is
+                  presented. The experimentation is performed on an image
+                  dataset with pothole in diverse road conditions and
+                  illumination variations as well as on real-time video captured
+                  through a moving vehicle. The Tiny-YOLOv4, YOLOv4, and YOLOv5
+                  evince the highest mean average precision (mAP) of 80.04\%,
+                  85.48\%, and 95\%, respectively, on the image set, thus
+                  proving the strength of the proposed approach for pothole
+                  detection and deployed on OAK-D for real-time detection. The
+                  study corroborated Tiny-YOLOv4 as the befitted model for
+                  real-time pothole detection with 90\% detection accuracy and
+                  31.76 FPS.},
+  year =         2022
+}
 
 @Book{calo25:RobotLaw,
   editor =       {Ryan Calo and Michael Froomkin and Kristen Thomasen},
