--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,12 @@
+@inproceedings{agro2024uno,
+  title =        {UnO: Unsupervised Occupancy Fields for Perception and
+                  Forecasting},
+  author =       {Agro, Ben and Sykora, Quin and Casas, Sergio and Gilles,
+                  Thomas and Urtasun, Raquel},
+  booktitle =    {CVPR},
+  year =         2024,
+}
+
 @inproceedings{bouarfa2020towards,
   title =        {Towards Automated Aircraft Maintenance Inspection. A use case
                   of detecting aircraft dents using Mask R-CNN},
