FOD detection references with public data

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,25 @@
+
+@Article{farooq-2023-yolov8,
+  author =       {Javaria Farooq and Muhammad Muaz and Khurram Khan Jadoon and
+                  Nayyer Aafaq and Muhammad Khizer Ali Khan},
+  title =        {An improved YOLOv8 for foreign object debris detection with
+                  optimized architecture for small objects},
+  journal =      {Multimedia Tools and Applications},
+  year =         2023,
+  volume =       83,
+  pages =        {60921–60947},
+  month =        {Dec}
+}
+
+@article{farooq2023randomize,
+  title =        {Randomize to Generalize: Domain Randomization for Runway FOD
+                  Detection},
+  author =       {Farooq, Javaria and Aafaq, Nayyer and Khan, M and Saleem,
+                  Ammar and Siddiqui, M Ibraheem},
+  journal =      {arXiv preprint arXiv:2309.13264},
+  year =         2023
+}
+
 @inproceedings{agro2024uno,
   title =        {UnO: Unsupervised Occupancy Fields for Perception and
                   Forecasting},
