cvpr papers update

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,32 @@
+@inproceedings{wang2025vggt,
+  title =        {VGGT: Visual Geometry Grounded Transformer},
+  author =       {Wang, Jianyuan and Chen, Minghao and Karaev, Nikita and
+                  Vedaldi, Andrea and Rupprecht, Christian and Novotny, David},
+  booktitle =    {Proceedings of the IEEE/CVF Conference on Computer Vision and
+                  Pattern Recognition},
+  year =         {2025}
+}
+
+@InProceedings{zhang-2025-flashmo,
+  author =       {Zeyu Zhang and Yiran Wang and Danning Li and Dong Gong and Ian
+                  Reid and Richard Hartley},
+  title =        {FlashMo: Geometric Interpolants and Frequency-Aware Sparsity
+                  for Scalable Efficient Motion Generation},
+  booktitle =    {39th Conference on Neural Information Processing Systems
+                  (NeurIPS 2025)},
+  year =         2025,
+  month =        {Dec},
+  address =      {San Diego, CA},
+  annote =       {https://steve-zeyu-zhang.github.io/FlashMo}
+}
+
+@book{Bishop:DeepLearning24,
+  author =       {Christopher M. Bishop and Hugh Bishop},
+  title =        {Deep Learning: Foundations and Concepts},
+  year =         2024,
+  publisher =    {Springer}
+}
+
 @Article{farooq-2023-yolov8,
   author =       {Javaria Farooq and Muhammad Muaz and Khurram Khan Jadoon and
                   Nayyer Aafaq and Muhammad Khizer Ali Khan},
