--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,20 @@
+@inproceedings{shan-2018-lego-loam,
+  title={LeGO-LOAM: Lightweight and Ground-Optimized Lidar Odometry and Mapping on Variable Terrain},
+  author={Tixiao Shan and Brendan Englot},
+  booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  pages={4758-4765},
+  year=2018,
+  organization={IEEE}
+}
+
+
+@article{lian-2025-describe-anything,
+    title={Describe Anything: Detailed Localized Image and Video Captioning}, 
+    author={Long Lian and Yifan Ding and Yunhao Ge and Sifei Liu and Hanzi Mao and Boyi Li and Marco Pavone and Ming-Yu Liu and Trevor Darrell and Adam Yala and Yin Cui},
+    journal={arXiv preprint arXiv:2504.16072},
+    year=2025
+}
+
 @inproceedings{wang2025vggt,
   title =        {VGGT: Visual Geometry Grounded Transformer},
   author =       {Wang, Jianyuan and Chen, Minghao and Karaev, Nikita and
