--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,42 @@
+@INPROCEEDINGS{dong-2025-leveragin-sd-map,
+  author =       {Dong, Zhiwei and Ding, Ran and Li, Wei and Zhang, Peng and
+                  Tang, Guobin and Guo, Jia},
+  booktitle =    {2025 IEEE/CVF Conference on Computer Vision and Pattern
+                  Recognition (CVPR)},
+  title =        {Leveraging SD Map to Augment HD Map-based Trajectory
+                  Prediction},
+  year =         2025,
+  pages =        {17219-17228},
+  keywords =     {Degradation;Computer vision;Roads;Redundancy;Predictive
+                  models;Real-time systems;Trajectory;Pattern
+                  recognition;Autonomous vehicles;Monitoring;trajectory
+                  prediction;sd map;motion forecasting},
+  doi =          {10.1109/CVPR52734.2025.01605},
+  comment =      {Causation of dataset for VLA. The VL compression},
+}
+
+@misc{wang-2025-alpamayo-r1,
+  title =        {Alpamayo-R1: Bridging Reasoning and Action Prediction for
+                  Generalizable Autonomous Driving in the Long Tail},
+  author =       {Yan Wang and Wenjie Luo and Junjie Bai and Yulong Cao and Tong
+                  Che and Ke Chen and Yuxiao Chen and Jenna Diamond and Yifan
+                  Ding and Wenhao Ding and Liang Feng and Greg Heinrich and Jack
+                  Huang and Peter Karkus and Boyi Li and Pinyi Li and Tsung-Yi
+                  Lin and Dongran Liu and Ming-Yu Liu and Langechuan Liu and
+                  Zhijian Liu and Jason Lu and Yunxiang Mao and Pavlo Molchanov
+                  and Lindsey Pavao and Zhenghao Peng and Mike Ranzinger and Ed
+                  Schmerling and Shida Shen and Yunfei Shi and Sarah Tariq and
+                  Ran Tian and Tilman Wekel and Xinshuo Weng and Tianjun Xiao
+                  and Eric Yang and Xiaodong Yang and Yurong You and Xiaohui
+                  Zeng and Wenyuan Zhang and Boris Ivanovic and Marco Pavone},
+  year =         2025,
+  eprint =       {2511.00088},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO},
+  url =          {https://arxiv.org/abs/2511.00088},
+  comment =      {Not much improvement from the SD, surprising incremental for CVPR},
+}
+
 @inproceedings{shan-2018-lego-loam,
   title={LeGO-LOAM: Lightweight and Ground-Optimized Lidar Odometry and Mapping on Variable Terrain},
   author={Tixiao Shan and Brendan Englot},
@@ -6,7 +45,6 @@
   year=2018,
   organization={IEEE}
 }
-
 
 @article{lian-2025-describe-anything,
     title={Describe Anything: Detailed Localized Image and Video Captioning}, 
