NeurIPS and IJRR papers

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,56 @@
+@misc{immel2025sdtagnetleveragingtextannotatednavigation,
+  title =        {SDTagNet: Leveraging Text-Annotated Navigation Maps for Online
+                  HD Map Construction},
+  author =       {Fabian Immel and Jan-Hendrik Pauls and Richard Fehler and
+                  Frank Bieder and Jonas Merkert and Christoph Stiller},
+  booktitle =    {NeurIPS 2025},                
+  year =         {2025},
+  eprint =       {2506.08997},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2506.08997},
+}
+
+@article{doi:10.1177/02783649251390579,
+  author =       {Dingzhe Li and Yixiang Jin and YuHao Sun and Yong A and Hongze
+                  Yu and Jun Shi and Xiaoshuai Hao and Peng Hao and Huaping Liu
+                  and Xiang Li and Xinde Li and Fuchun Sun and Jianwei Zhang and
+                  Bin Fang},
+  title =        {What foundation models can bring for robot learning in
+                  manipulation: A survey},
+  journal =      {The International Journal of Robotics Research},
+  volume =       {0},
+  number =       {0},
+  pages =        { },
+  year =         {2025},
+  doi =          {10.1177/02783649251390579},
+  URL =          {https://doi.org/10.1177/02783649251390579 },
+  eprint =       {https://doi.org/10.1177/02783649251390579 }
+,
+  abstract =     { The realization of universal robots is an ultimate goal of
+                  researchers. However, a key hurdle in achieving this goal lies
+                  in the robots’ ability to manipulate objects in their
+                  unstructured environments according to different tasks. The
+                  learning-based approach is considered an effective way to
+                  address generalization. The impressive performance of
+                  foundation models in the fields of computer vision and natural
+                  language suggests the potential of embedding foundation models
+                  into manipulation tasks as a viable path toward achieving
+                  general manipulation capability. However, we believe achieving
+                  general manipulation capability requires an overarching
+                  framework akin to auto driving. This framework should
+                  encompass multiple functional modules, with different
+                  foundation models assuming distinct roles in facilitating
+                  general manipulation capability. This survey focuses on the
+                  contributions of foundation models to robot learning for
+                  manipulation. We propose a comprehensive framework and detail
+                  how foundation models can address challenges in each module of
+                  the framework. What’s more, we examine current approaches,
+                  outline challenges, suggest future research directions, and
+                  identify potential risks associated with integrating
+                  foundation models into this domain. }
+}
+
 @INPROCEEDINGS{dong-2025-leveragin-sd-map,
   author =       {Dong, Zhiwei and Ding, Ran and Li, Wei and Zhang, Peng and
                   Tang, Guobin and Guo, Jia},
