--- a/newlib.bib
+++ b/newlib.bib
@@ -1,10 +1,24 @@
+
+@misc{liu2025adgambientdiffusionguideddataset,
+  title =        {ADG: Ambient Diffusion-Guided Dataset Recovery for
+                  Corruption-Robust Offline Reinforcement Learning},
+  author =       {Zeyuan Liu and Zhihe Yang and Jiawei Xu and Rui Yang and
+                  Jiafei Lyu and Baoxiang Wang and Yunjian Xu and Xiu Li},
+  year =         2025,
+  booktitle =    {NeurIPS 2025},                
+  eprint =       {2505.23871},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.LG},
+  url =          {https://arxiv.org/abs/2505.23871},
+}
+
 @misc{immel2025sdtagnetleveragingtextannotatednavigation,
   title =        {SDTagNet: Leveraging Text-Annotated Navigation Maps for Online
                   HD Map Construction},
   author =       {Fabian Immel and Jan-Hendrik Pauls and Richard Fehler and
                   Frank Bieder and Jonas Merkert and Christoph Stiller},
   booktitle =    {NeurIPS 2025},                
-  year =         {2025},
+  year =         2025,
   eprint =       {2506.08997},
   archivePrefix ={arXiv},
   primaryClass = {cs.CV},
