QCOM call on Planning

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,25 @@
+@misc{jia2025drivetransformerunifiedtransformerscalable,
+  title =        {DriveTransformer: Unified Transformer for Scalable End-to-End
+                  Autonomous Driving},
+  author =       {Xiaosong Jia and Junqi You and Zhiyuan Zhang and Junchi Yan},
+  year =         {2025},
+  eprint =       {2503.07656},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.LG},
+  url =          {https://arxiv.org/abs/2503.07656},
+}
+
+@misc{feng2025rap3drasterizationaugmented,
+  title =        {RAP: 3D Rasterization Augmented End-to-End Planning},
+  author =       {Lan Feng and Yang Gao and Eloi Zablocki and Quanyi Li and
+                  Wuyang Li and Sichao Liu and Matthieu Cord and Alexandre
+                  Alahi},
+  year =         2025,
+  eprint =       {2510.04333},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2510.04333}
+}
 
 @misc{liu2025adgambientdiffusionguideddataset,
   title =        {ADG: Ambient Diffusion-Guided Dataset Recovery for
