Science Robotics December Papers

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,105 @@
+@article{dreczkowski-2025-learning,
+  author =       {Kamil Dreczkowski and Pietro Vitiello and Vitalis Vosylius and
+                  Edward Johns },
+  title =        {Learning a thousand tasks in a day},
+  journal =      {Science Robotics},
+  volume =       10,
+  number =       108,
+  pages =        {eadv7594},
+  year =         2025,
+  doi =          {10.1126/scirobotics.adv7594},
+  URL =          {https://www.science.org/doi/abs/10.1126/scirobotics.adv7594},
+  eprint =       {https://www.science.org/doi/pdf/10.1126/scirobotics.adv7594},
+  abstract =     {Humans are remarkably efficient at learning tasks from
+                  demonstrations, but today’s imitation learning methods for
+                  robot manipulation often require hundreds or thousands of
+                  demonstrations per task. We investigated two fundamental
+                  priors for improving learning efficiency: decomposing
+                  manipulation trajectories into sequential alignment and
+                  interaction phases and retrieval-based generalization. Through
+                  3450 real-world rollouts, we systematically studied this
+                  decomposition. We compared different design choices for the
+                  alignment and interaction phases and examined generalization
+                  and scaling trends relative to today’s dominant paradigm of
+                  behavioral cloning with a single-phase monolithic policy. In
+                  the few-demonstrations-per-task regime (\&lt;10
+                  demonstrations), decomposition achieved an order of magnitude
+                  of improvement in data efficiency over single-phase learning,
+                  with retrieval consistently outperforming behavioral cloning
+                  for both alignment and interaction. Building on these
+                  insights, we developed Multi-Task Trajectory Transfer (MT3),
+                  an imitation learning method based on decomposition and
+                  retrieval. MT3 learns everyday manipulation tasks from as
+                  little as a single demonstration each while also generalizing
+                  to previously unseen object instances. This efficiency enabled
+                  us to teach a robot 1000 distinct everyday tasks in under 24
+                  hours of human demonstrator time. Through 2200 additional
+                  real-world rollouts, we reveal MT3’s capabilities and
+                  limitations across different task families. Decomposing
+                  manipulation trajectories improves imitation learning
+                  efficiency when demonstrations per task are limited.}
+}
+
+@article{howe-2025-how,
+  author =       {Robert D. Howe and Zixi Liu },
+  title =        {How reliable is robotic manipulation in the real world?},
+  journal =      {Science Robotics},
+  volume =       10,
+  number =       109,
+  pages =        {eadz6787},
+  year =         2025,
+  doi =          {10.1126/scirobotics.adz6787},
+  URL =          {https://www.science.org/doi/abs/10.1126/scirobotics.adz6787},
+  eprint =       {https://www.science.org/doi/pdf/10.1126/scirobotics.adz6787},
+  abstract =     {The reliability of manipulation in unstructured environments
+                  is unknown, but 1 in 10,000 dropped items may be acceptable.
+                  The reliability of manipulation in unstructured environments
+                  in unknown, but 1 in 10,000 dropped items may be acceptable.}
+}
+
+@article{lee-2025-soft,
+  author =       {Seong-Bin Lee and Namsuk Cho and Geonho Lee and Seungju Lee
+                  and Junseo Kim and Gyujin Shim and Jong Tai Jang and Se Kwon
+                  Kim and TaeWon Seo and Chae Kyung Sim and Dae-Young Lee },
+  title =        {Soft deployable airless wheel for lunar lava tube intact
+                  exploration},
+  journal =      {Science Robotics},
+  volume =       10,
+  number =       109,
+  pages =        {eadx2549},
+  year =         2025,
+  doi =          {10.1126/scirobotics.adx2549},
+  URL =          {https://www.science.org/doi/abs/10.1126/scirobotics.adx2549},
+  eprint =       {https://www.science.org/doi/pdf/10.1126/scirobotics.adx2549},
+  abstract =     {Lunar pits and lava tubes hold promise for future human
+                  habitation, offering natural protection and stable
+                  environments. However, exploring these sites entails
+                  challenging terrain, including steep slopes along cave funnels
+                  and vertical cliffs. Here, we present a soft, deployable
+                  airless wheel to address these challenges. By achieving a high
+                  deployment ratio, multiple rovers can be stowed efficiently
+                  without sacrificing mobility, thereby improving mission
+                  reliability and flexibility. The proposed wheel incorporates a
+                  reconfigurable reciprocal structure of elastic steel strips
+                  arranged in a woven helical pattern, enabling shape
+                  transformations while preserving load-bearing capacity. This
+                  reciprocal arrangement also allows for safe vertical descents
+                  and mitigates damage from accidental falls in caves. By
+                  distributing strain throughout the wheel’s body, reliance on
+                  delicate mechanical components is minimized—a critical
+                  advantage under extreme lunar conditions. The wheel can be
+                  stowed at a diameter of 230 millimeters and deployed to 500
+                  millimeters. Experimental results show successful traversal of
+                  200-millimeter obstacles, stable mobility on rocky and lunar
+                  soil simulant surfaces, and resilience to drop impacts
+                  simulating a 100-meter descent under lunar gravity. These
+                  findings underscore the wheel’s suitability for future pit and
+                  cave exploration, even in harsh lunar environments. A soft,
+                  deployable airless wheel enables reliable and effective
+                  multirover lunar pit exploration.}
+}
+
+
 @misc{jia2025drivetransformerunifiedtransformerscalable,
   title =        {DriveTransformer: Unified Transformer for Scalable End-to-End
                   Autonomous Driving},
