QCOM Planning and Flow paper

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,17 @@
+@misc{tan-2025-flow-matching,
+  title =        {Flow Matching-Based Autonomous Driving Planning with Advanced
+                  Interactive Behavior Modeling},
+  author =       {Tianyi Tan and Yinan Zheng and Ruiming Liang and Zexu Wang and
+                  Kexin Zheng and Jinliang Zheng and Jianxiong Li and Xianyuan
+                  Zhan and Jingjing Liu},
+  year =         2025,
+  eprint =       {2510.11083},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO},
+  url =          {https://arxiv.org/abs/2510.11083},
+}
+
+
 @article{dreczkowski-2025-learning,
   author =       {Kamil Dreczkowski and Pietro Vitiello and Vitalis Vosylius and
                   Edward Johns },
