--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,36 @@
+@Article{robinson2025,
+  author =       {Robinson, Isaac and Robicheaux, Peter and Popov, Matvei and
+                  Ramanan, Deva and Peri, Neehar},
+  title =        {RF-DETR: Neural Architecture Search for Real-Time Detection
+                  Transformers},
+  journal =      {arXiv},
+  pages =        {2511.09554v1},
+  year =         2025,
+  abstract =     {Open-vocabulary detectors achieve impressive performance on
+                  COCO, but often fail to generalize to real-world datasets with
+                  out-of-distribution classes not typically found in their
+                  pre-training. Rather than simply fine-tuning a heavy-weight
+                  vision-language model (VLM) for new domains, we introduce
+                  RF-DETR, a light-weight specialist detection transformer that
+                  discovers accuracy-latency Pareto curves for any target
+                  dataset with weight-sharing neural architecture search (NAS).
+                  Our approach fine-tunes a pre-trained base network on a target
+                  dataset and evaluates thousands of network configurations with
+                  different accuracy-latency tradeoffs without re-training.
+                  Further, we revisit the ``tunable knobs'' for NAS to improve
+                  the transferability of DETRs to diverse target domains.
+                  Notably, RF-DETR significantly improves on prior
+                  state-of-the-art real-time methods on COCO and Roboflow100-VL.
+                  RF-DETR (nano) achieves 48.0 AP on COCO, beating D-FINE (nano)
+                  by 5.3 AP at similar latency, and RF-DETR (2x-large)
+                  outperforms GroundingDINO (tiny) by 1.2 AP on Roboflow100-VL
+                  while running 20x as fast. To the best of our knowledge,
+                  RF-DETR (2x-large) is the first real-time detector to surpass
+                  60 AP on COCO. Our code is at
+                  https://github.com/roboflow/rf-detr},
+}
+
+
 @misc{tan-2025-flow-matching,
   title =        {Flow Matching-Based Autonomous Driving Planning with Advanced
                   Interactive Behavior Modeling},
