VLA for driving and Sejnowski books

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,32 @@
+@Article{hu-2025-vision-language-action,
+  author =       {Hu, Tianshuai and Liu, Xiaolu and Wang, Song and Zhu, Yiyao
+                  and Liang, Ao and Kong, Lingdong and Zhao, Guoyang and Gong,
+                  Zeying and Cen, Jun and Huang, Zhiyu},
+  title =        {Vision-Language-Action Models for Autonomous Driving: Past,
+                  Present, and Future},
+  journal =      {arXiv preprint arXiv:2512.16760},
+  year =         2025,
+  abstract =     {Autonomous driving has long relied on modular
+                  ``Perception-Decision-Action'' pipelines, where hand-crafted
+                  interfaces and rule-based components often break down in
+                  complex or long-…},
+}
+
+
+@book{sejnowski-24-llm,
+  title =        {ChatGPT and the future of AI: The deep language revolution},
+  author =       {Sejnowski, Terrence J},
+  year =         2024,
+  publisher =    {MIT Press}
+}
+
+@book{sejnowski2018deep,
+  title =        {The deep learning revolution},
+  author =       {Sejnowski, Terrence J},
+  year =         2018,
+  publisher =    {MIT press}
+}
+
 @Article{nvidia2025,
   author =       {NVIDIA and Wang, Yan and Luo, Wenjie and Bai, Junjie and Cao,
                   Yulong and Che, Tong and Chen, Ke and Chen, Yuxiao and
