--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,12 @@
+@article{fontan-2025-vslam-lab,
+  title =        {VSLAM-LAB: A Comprehensive Framework for Visual SLAM Methods
+                  and Datasets},
+  author =       {Fontan, Alejandro and Fischer, Tobias and Civera, Javier and
+                  Milford, Michael},
+  journal =      {arXiv preprint arXiv:2504.04457},
+  year =         2025
+}
+
 @Article{hu-2025-vision-language-action,
   author =       {Hu, Tianshuai and Liu, Xiaolu and Wang, Song and Zhu, Yiyao
                   and Liang, Ao and Kong, Lingdong and Zhao, Guoyang and Gong,
@@ -11,7 +20,6 @@
                   interfaces and rule-based components often break down in
                   complex or long-…},
 }
-
 
 @book{sejnowski-24-llm,
   title =        {ChatGPT and the future of AI: The deep language revolution},
