SII related papers

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,30 @@
+@InProceedings{raheema-2026-roscoe,
+  author =       {Julian Raheema and Seth Farrell and Michael Hess and Raymond
+                  Provost and Mark Bilinski and Henrik I Christensen},
+  title =        {{ROSCOE: Robot Scanning and Computing Equipment for Autonomous
+                  Terrestrial Mapping}},
+  booktitle =    {Symposium on System Integration (SII)},
+  year =         2026,
+  month =        {Jan},
+  address =      {Cancun, MX},
+  organization = {IEEE/SICE}
+}
+
+
+
+@Article{taniguchi-2024-collectiv,
+  author =       {Taniguchi, Tadahiro},
+  title =        {Collective predictive coding hypothesis: Symbol emergence as
+                  decentralized bayesian inference},
+  journal =      {Frontiers in Robotics and AI},
+  volume =       11,
+  pages =        1353870,
+  year =         2024,
+  abstract =     {Understanding the emergence of symbol systems, especially
+                  language, requires the construction of a computational model
+                  that reproduces both the developmental learning process in …},
+}
+
 @article{fontan-2025-vslam-lab,
   title =        {VSLAM-LAB: A Comprehensive Framework for Visual SLAM Methods
                   and Datasets},
