Robotics January Files

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,87 @@
+
+@Article{patil-2026-autonomous-forklift-warehous-automation,
+  AUTHOR =       {Patil, Aditya Dilip and Farzan, Siavash},
+  TITLE =        {Autonomous Forklifts for Warehouse Automation: A Comprehensive
+                  Review},
+  JOURNAL =      {Robotics},
+  VOLUME =       15,
+  YEAR =         2026,
+  NUMBER =       2,
+  ARTICLE-NUMBER =30,
+  URL =          {https://www.mdpi.com/2218-6581/15/2/30},
+  ISSN =         {2218-6581},
+  ABSTRACT =     {Despite decades of research, autonomous forklifts remain
+                  deployed at a small scale (2–50 vehicles), while industrial
+                  warehouses require coordinating hundreds of vehicles in
+                  environments shared with human workers. This systematic review
+                  analyzes forklift-specific autonomous technologies published
+                  between 2010 and 2025 across major robotics databases
+                  (including IEEE Xplore, ACM, Elsevier, and related venues) to
+                  identify deployment barriers. Following the PRISMA guidelines,
+                  we systematically selected 122 peer-reviewed papers addressing
+                  forklift-specific challenges across eight subsystems: vehicle
+                  modeling, localization, planning, control, vision-based
+                  manipulation, multi-vehicle coordination, and safety. We
+                  synthesized 80 methods through 8 standardized comparison
+                  tables with quality assessment based on validation rigor.
+                  State-of-the-art approaches demonstrate strong laboratory
+                  performance: localization achieving ±1.4 mm accuracy, control
+                  enabling sub-centimeter manipulation, planning reducing
+                  mission times by 2–55%, vision reaching 98%+ recognition, and
+                  safety frameworks cutting rollover risk by 53–59%. However,
+                  validation predominantly occurs at laboratory scale, revealing
+                  a critical deployment gap. These achievements do not scale to
+                  industrial environments due to fleet coordination complexity,
+                  payload variability, and unpredictable human behavior. Our
+                  contributions include the following: (1) performance rankings
+                  with technology selection guidance, (2) systematic gap
+                  characterization, and (3) research priorities addressing
+                  mixed-fleet coordination, learning-enhanced control, and
+                  human-aware safety. This review was not prospectively
+                  registered.},
+  DOI =          {10.3390/robotics15020030}
+}
+
+@misc{zhang-2025-bridging-past-future,
+  title =        {Bridging Past and Future: End-to-End Autonomous Driving with
+                  Historical Prediction and Planning},
+  author =       {Bozhou Zhang and Nan Song and Xin Jin and Li Zhang},
+  year =         2025,
+  eprint =       {2503.14182},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO},
+  url =          {https://arxiv.org/abs/2503.14182},
+}
+
+@Article{kirby-2026-driving-register,
+  author =       {Kirby, Ellington and Boulch, Alexandre and Xu, Yihong and Yin,
+                  Yuan and Puy, Gilles and Zablocki, {\'E}loi and Bursuc, Andrei
+                  and Gidaris, Spyros and Marlet, Renaud and Bartoccioni,
+                  Florent},
+  title =        {Driving on Registers},
+  journal =      {arXiv preprint arXiv:2601.05083},
+  year =         2026,
+  abstract =     {We present DrivoR, a simple and efficient transformer-based
+                  architecture for end-to-end autonomous driving. Our approach
+                  builds on pretrained Vision Transformers (ViTs) and …},
+}
+
+@Article{zhao-2025-stl-go,
+  author =       {Zhao, Yiqi and Yu, Xinyi and Hoxha, Bardh and Fainekos,
+                  Georgios and Deshmukh, Jyotirmoy and Lindemann, Lars},
+  title =        {STL-GO: Spatio-Temporal Logic with Graph Operators for
+                  Distributed Systems with Multiple Network Topologies},
+  journal =      {ACM Transactions on Embedded Computing Systems},
+  volume =       24,
+  number =       {5s},
+  pages =        {1--23},
+  year =         2025,
+  abstract =     {… an STL-GO-S speciication. {\bullet} We compare STL-GO with
+                  STL, SaSTL, and SSTL and show that STL-GO … We illustrate
+                  STL-GO and the eiciency of our distributed monitoring
+                  algorithms in a …},
+}
+
 @InProceedings{raheema-2026-roscoe,
   author =       {Julian Raheema and Seth Farrell and Michael Hess and Raymond
                   Provost and Mark Bilinski and Henrik I Christensen},
@@ -9,8 +93,6 @@
   address =      {Cancun, MX},
   organization = {IEEE/SICE}
 }
-
-
 
 @Article{taniguchi-2024-collectiv,
   author =       {Taniguchi, Tadahiro},
