--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,21 @@
+@Proceedings{stark24-doobby,
+  author =       {Stark, Carson and Chun, Bohkyung and Charleston, Casey and
+                  Ravi, Varsha and Pabon, Luis and Sunkari, Surya and Mohan,
+                  Tarun and Stone, Peter and Hart, Justin},
+  title =        {Dobby: a conversational service robot driven by GPT-4},
+  booktitle =    {Dobby: a conversational service robot driven by GPT-4},
+  volume =       {2024 33rd IEEE International Conference on Robot and Human
+                  Interactive Communication (ROMAN)},
+  publisher =    {IEEE},
+  pages =        {1362-1369},
+  year =         2024,
+  abstract =     {… Dobby is built on top of an existing robust and flexible
+                  robot platform that includes a Segway … The conversational
+                  robot used in this study is a modified version of the Dobby
+                  system. In this …},
+}
+
+
 
 @Article{patil-2026-autonomous-forklift-warehous-automation,
   AUTHOR =       {Patil, Aditya Dilip and Farzan, Siavash},
