test-time detection

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,15 @@
+@Article{zhang25-test-time,
+  author =       {Zhang, Fengyi and Sun, Xiangyu and Yang, Huitong and Zhang,
+                  Zheng and Huang, Zi and Luo, Yadan},
+  title =        {Test-Time 3D Occupancy Prediction},
+  journal =      {arXiv preprint arXiv:2503.08485},
+  year =         2025,
+  abstract =     {Self-supervised 3D occupancy prediction offers a promising
+                  solution for understanding complex driving scenes without
+                  requiring costly 3D annotations. However, training dense …},
+}
+
+
 @Proceedings{stark24-doobby,
   author =       {Stark, Carson and Chun, Bohkyung and Charleston, Casey and
                   Ravi, Varsha and Pabon, Luis and Sunkari, Surya and Mohan,
